--- a/.github/workflows/java-checkstyle.yml
+++ b/.github/workflows/java-checkstyle.yml
@@ -9,10 +9,10 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
-name: Run the java checkstyle
+name: Java checkstyle
 
-# read-only repo token
-# no access to secrets
+# read-write repo token
+# access to secrets
 on:
   pull_request_target:
     branches: [ main ]
@@ -33,35 +33,34 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: 11
 
-      - name: Run checkstyle
-        run: mvn googleformatter:format@reformat-sources
+    - name: Run checkstyle
+      run: mvn googleformatter:format@reformat-sources
 
-      - name: Save checkstyle outcome and PR number
-        shell: bash {0}
-        run: |
-          mkdir -p ./pr
-          git diff-files --quiet
-          echo $? > ./pr/checkstyle_exit_code
-          echo ${{ github.event.number }} > ./pr/NR
+    - name: Save checkstyle outcome
+      id: git
+      continue-on-error: true
+      run: |
+        git diff-files --quiet
 
-      - name: Upload checkstyle outcome and PR number
-        uses: actions/upload-artifact@v2
-        with:
-          name: pr
-          path: pr/
+    - name: Create a comment in the PR with the instructions
+      if: steps.git.outcome != 'success'
+      uses: peter-evans/create-or-update-comment@v1
+      with:
+        issue-number: ${{ github.event.pull_request.number }}
+        body: |
+          **The Java checkstyle failed.**
 
-      - name: Fail if Java checkstyle failed
-        uses: actions/github-script@v3
-        with:
-          script: |
-            var fs = require('fs');
-            var error = Number(fs.readFileSync('./pr/checkstyle_exit_code')) > 0
-            if (error) {
-              process.exit(error)
-            }
+          Please run `mvn googleformatter:format@reformat-sources` in the root of your repository and commit the changes to this PR. You can also use [pre-commit](https://pre-commit.com/) to automate the Java code formatting.
+
+    - name: Java checkstyle failed, check the comment in the PR
+      if: steps.git.outcome != 'success'
+      run: |
+        exit 1
